@@ -4,6 +4,7 @@ debian-installer (202306XX) UNRELEASED; urgency=medium
   * Install trixie, using trixie udebs.
   * Bump Linux kernel ABI to 6.6.8.
   * Bump (temporary) linux-image build-deps accordingly.
+  * Makefile: unversion /boot/vmlinuz-* into /boot/vmlinuz.
 
   [ harry88@gmx.ph ]
   * Add support for Orange Pi One Plus (Closes: #980493)
